force-app/main/default/objects/Financial__c/Financial__c.object-meta.xml
<CustomObject>
    <label>Financial</label>
    <nameField>
        <label>Financial Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>