force-app/main/default/objects/Financial__c/fields/Annual_Financials__c.field-meta.xml
<CustomField>
    <fullName>Annual_Financials__c</fullName>
    <label>Annual Financials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audited</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>No Audit or Review</fullName>
            </value>
            <value>
                <fullName>Carve-out</fullName>
            </value>
            <value>
                <fullName>[Unknown]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>